--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style type="text/tailwindcss">
 
       @utility my-style {
@@ -21,12 +22,12 @@
     <!------ Header Section Start ------->
     <header class="mx-32">
         <!-- Navigation section start -->
-        <nav class="flex justify-between my-4 py-4">
+        <nav class="flex justify-between items-center my-4 py-4 z-50 shadow-sm">
             <div class="grow-6">
                 <img src="./images/Logo.png" alt="Logo" class="w-30 h-6">
             </div>
             
-            <div class="flex gap-8 grow-3">
+            <div class="hidden md:flex gap-8 grow-3">
                 <ul class="flex gap-4">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -34,9 +35,14 @@
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </div>
-            <div class="flex gap-2 grow-1">
+            <div class="hidden md:flex gap-2 grow-1">
                 <a class="cursor-pointer py-2">Log in</a>
                 <a class="px-4 py-2 rounded-lg font-semibold bg-[#ff6600] text-white cursor-pointer hover:opacity-80">Sign up</a>
+            </div>
+            <div class="md:hidden flex items-center">
+                <button class="text-gray-900 focus:outline-none">
+                    <i class="fas fa-bars text-2xl"></i>
+                </button>
             </div>
         </nav>
 
@@ -232,10 +238,10 @@
     </section>
 
     <!---- Footer Section Start ----->
-    <footer class="flex justify-between mx-32 mt-40 py-6">
+    <footer class="flex flex-col md:flex-row justify-between mx-32 mt-40 py-6">
         <img class="w-25 h-6" src="./images/Logo.png" alt="Logo">
         <p>&copy;2026 Epixelab. All rights reserved.</p>
-        <ul class="flex gap-4">
+        <ul class="flex flex-col md:flex-row gap-4">
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">How it Works</a></li>
             <li><a href="#">Pricing</a></li>
